--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,9 @@ langchain_openai==0.3.28
 python-dotenv==1.1.1
 streamlit==1.36.0
 selenium
+unstructured
+libmagic
+python-magic
+python-magic-bin
+tiktoken
+faiss-cpu
