--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ langchain_community==0.3.27
 langchain_openai==0.3.28
 python-dotenv==1.1.1
 streamlit==1.36.0
+rich==13.7.1
 selenium
 unstructured
 libmagic
